Design and style fixes in PWA (#692)
* Design and style fixes in PWA

* added padding

* removed the extra space between next and previous button.

--- a/css/style.css
+++ b/css/style.css
@@ -835,6 +835,8 @@ input:checked + .slider:before {
 
 .nci-connect-logo {
     padding-left: 0px !important;
+    padding-top: 22px;
+    padding-bottom: 22px;
 }
 
 .nci-connect-logo-width {
@@ -899,11 +901,14 @@ input:checked + .slider:before {
     color:white;
     font-size: 46px;
     margin-right:auto;
+    line-height: 1;
+    font-weight: bold;
 }
 
 .homeTitleText em{
     font-style: normal;
     color:#FFBF17;
+    font-weight: lighter;
 }
 .homeTitleTextMobile{
     font-size: 21px;
@@ -911,6 +916,7 @@ input:checked + .slider:before {
     letter-spacing: 0.07px;
     text-align: center;
     line-height: 25px;
+    font-family: Montserrat-Bold;
 
 }
 
@@ -935,14 +941,19 @@ input:checked + .slider:before {
 }
 
 .consentNextButton{
-    color:#174C70 !important;
     background-color:#FFBF17 !important;
     border-color:#FFBF17 !important;
     font-weight:bold !important;
-    font-size:16px;
-
+    font-size:18px;
+    text-align: left;
+    line-height: 27px;
+    font-family: NotoSans;
+    color: #2E2E2E !important;
+    padding: 6px 12px !important;
 }
-
+consentNextButton:hover{
+    background-color: #f9a921 !important;
+}
 .userProfileHeader{
     font-size:28px;
     font-family: 'Montserrat', sans-serif;
@@ -987,6 +998,10 @@ input:checked + .slider:before {
     border-color:#2A72A5 !important;
     border-width:2px !important;
     color:#2A72A5 !important;
+}
+.consentPrevButton:hover{
+    background-color: #2A72A5 !important;
+    color: white !important;
 }
 .connectBody1{
     background-color:#2a72a5; 
@@ -1353,4 +1368,11 @@ button.connect-secondary {
 .site-info-align {
     vertical-align: top;
     text-align: left;
+}
+.SurveyIcon {
+    height: 55px;
+    width: 55px;
+    background-color: #2a72a5;
+    padding: 5px;
+    border-radius: 50%;
 }
